[gd_scene load_steps=9 format=3 uid="uid://cc2r5liu3fpf7"]

[ext_resource type="Script" path="res://scenes/UI/audio_paused_menu.gd" id="1_xesnx"]
[ext_resource type="Theme" uid="uid://c2lumoijk82ik" path="res://assets/themes/menu.tres" id="2_7qbas"]
[ext_resource type="PackedScene" uid="uid://ciboe7sdibtc3" path="res://scenes/world/main_start/shake_camera.tscn" id="2_7v3cw"]
[ext_resource type="Texture2D" uid="uid://c64txwxraypwi" path="res://assets/sprites/UI/Containers/menu.png" id="3_g8nff"]
[ext_resource type="PackedScene" uid="uid://pjr0tdqacf2g" path="res://scenes/UI/options_menu.tscn" id="3_knadn"]
[ext_resource type="Script" path="res://scenes/UI/music_volume_slider.gd" id="4_e21i5"]
[ext_resource type="Theme" uid="uid://cuucoj82fet30" path="res://scenes/UI/theme/options_menu.tres" id="5_nmsyh"]
[ext_resource type="FontFile" uid="uid://do43cmlq41sqf" path="res://assets/sprites/UI/Font/ThaleahFat.ttf" id="6_7i1bb"]

[node name="AudioPausedMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_xesnx")

[node name="ShakeCamera" parent="." instance=ExtResource("2_7v3cw")]

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Options_Menu" parent="." instance=ExtResource("3_knadn")]
visible = false

[node name="Audio" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 480.0
offset_bottom = 270.0
theme = ExtResource("2_7qbas")

[node name="TextureRect2" type="TextureRect" parent="Audio"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -170.0
offset_right = 189.0
offset_bottom = 205.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_g8nff")

[node name="VBoxContainer3" type="VBoxContainer" parent="Audio/TextureRect2"]
layout_mode = 2
offset_left = 75.0
offset_top = 112.0
offset_right = 295.0
offset_bottom = 219.0
size_flags_vertical = 4
theme = ExtResource("5_nmsyh")
theme_override_constants/separation = 2

[node name="MasterVolume" type="Label" parent="Audio/TextureRect2/VBoxContainer3"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_7i1bb")
text = "Master Volume"

[node name="volume_slider3" type="HSlider" parent="Audio/TextureRect2/VBoxContainer3"]
layout_mode = 2
max_value = 1.0
step = 0.001
value = 1.0
script = ExtResource("4_e21i5")
bus_name = "Master"

[node name="MusicVolume" type="Label" parent="Audio/TextureRect2/VBoxContainer3"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_7i1bb")
text = "Music Volume"

[node name="volume_slider" type="HSlider" parent="Audio/TextureRect2/VBoxContainer3"]
layout_mode = 2
max_value = 1.0
step = 0.001
value = 1.0
script = ExtResource("4_e21i5")
bus_name = "Music"

[node name="SFXVolume" type="Label" parent="Audio/TextureRect2/VBoxContainer3"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_7i1bb")
text = "SFX Volume"

[node name="volume_slider2" type="HSlider" parent="Audio/TextureRect2/VBoxContainer3"]
layout_mode = 2
max_value = 1.0
step = 0.001
value = 1.0
script = ExtResource("4_e21i5")
bus_name = "Sfx"

[node name="VBoxContainer2" type="VBoxContainer" parent="Audio/TextureRect2"]
layout_mode = 2
offset_left = 74.0
offset_top = 236.0
offset_right = 294.0
offset_bottom = 253.0

[node name="Back" type="Button" parent="Audio/TextureRect2/VBoxContainer2"]
layout_mode = 2
text = "Back
"

[node name="Label" type="Label" parent="Audio"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -99.0
offset_top = 13.0
offset_right = 98.0
offset_bottom = 60.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 50
text = "AUDIO"
horizontal_alignment = 1

[connection signal="mouse_entered" from="Audio/TextureRect2/VBoxContainer2/Back" to="." method="_on_back_mouse_entered"]
[connection signal="pressed" from="Audio/TextureRect2/VBoxContainer2/Back" to="." method="_on_back_pressed"]
